--- a/cluster/k8s/redi/kustomization.yaml
+++ b/cluster/k8s/redi/kustomization.yaml
@@ -4,16 +4,13 @@ resources:
 configMapGenerator:
   - name: xrootd-redi-conf
     files:
-      - xrootd-third-party-copy.cfg
+      - xrootd.cfg
       - auth-file-noauth
   - name: xrootd-redi-supervisor
     files:
       - supervisord.conf
 
 secretGenerator:
-- name: telegraf-conf
-  files:
-    - telegraf.conf
 - name: https-self-certs
   files:
     - OSG-Test-CA.pem
