--- a/cluster/k8s/redi/supervisord.conf
+++ b/cluster/k8s/redi/supervisord.conf
@@ -1,10 +1,10 @@
 [program: redi-cmsd]
-command=cmsd -c /etc/xrootd/xrootd-third-party-copy.cfg -l /var/log/xrootd/cmsd.log
+command=cmsd -c /etc/xrootd/xrootd.cfg -l /var/log/xrootd/cmsd.log
 user=xrootd
 autorestart=true
 
 [program:xrootd-redi]
-command=xrootd -c /etc/xrootd/xrootd-third-party-copy.cfg -l /var/log/xrootd/xrootd.log
+command=xrootd -c /etc/xrootd/xrootd.cfg -l /var/log/xrootd/xrootd.log
 user=xrootd
 autorestart=true
 
