--- a/.github/workflows/origin.yml
+++ b/.github/workflows/origin.yml
@@ -2,7 +2,7 @@ name: XRootD-Origin Build and Push
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   repository_dispatch:
     types:
       - dispatch-build
