--- a/cluster/origin/xrootd.cfg
+++ b/cluster/origin/xrootd.cfg
@@ -1,26 +1,24 @@
-all.role manager
+all.role server
+
+cms.space min 512m 1g
+cms.allow host *
 
 acc.authdb /etc/xrootd/auth-file-noauth
+xrootd.seclib /usr/lib64/libXrdSec.so
 
-set xrdr = $OSG_FQDN
-all.manager $xrdr:2213 
+all.manager 67.58.53.141:2213
 
 all.export /
 
-cms.allow host *
-
 if exec xrootd
-  xrd.protocol http:2094 /usr/lib64/libXrdHttp.so
-  xrd.port 2094
-  xrd.allow host *
   http.cadir /etc/grid-security/certificates
   http.cert /etc/grid-security/xrd/xrdcert.pem
   http.key /etc/grid-security/xrd/xrdkey.pem
-
-  http.desthttps yes
   http.exthandler xrdtpc libXrdHttpTPC.so
+  xrd.protocol http:2094 /usr/lib64/libXrdHttp.so
+  xrd.port 2094
 fi
 
 oss.localroot /mnt/ramdisk
 
-all.sitename xrootd-redi
+all.sitename US_CMS_DATALAKE_ORIGIN
