--- a/cluster/origin/xrootd.cfg
+++ b/cluster/origin/xrootd.cfg
@@ -6,7 +6,7 @@ cms.allow host *
 acc.authdb /etc/xrootd/auth-file-noauth
 xrootd.seclib /usr/lib64/libXrdSec.so
 
-all.manager 67.58.53.141:2213
+all.manager 192.170.236.138:2213
 
 all.export /
 
@@ -19,6 +19,6 @@ if exec xrootd
   xrd.port 2094
 fi
 
-oss.localroot /mnt/ramdisk
+oss.localroot /mnt
 
 all.sitename US_CMS_DATALAKE_ORIGIN
