--- a/cluster/redi/xrootd.cfg
+++ b/cluster/redi/xrootd.cfg
@@ -21,6 +21,6 @@ if exec xrootd
   http.exthandler xrdtpc libXrdHttpTPC.so
 fi
 
-oss.localroot /mnt/ramdisk
+oss.localroot /mnt
 
 all.sitename US_CMS_DATALAKE_REDI
