--- a/cluster/origin/Makefile
+++ b/cluster/origin/Makefile
@@ -1,5 +1,5 @@
 delete:
 	- kubectl delete -k ./
 create:
-	- sed -i '/all.manager/c\all.manager\ $(shell kubectl get pods -l k8s-app=xrootd-redi-a -o jsonpath="{.items[0].status.podIP}"):2213' xrootd-third-party-copy.cfg
+	- sed -i '/all.manager/c\all.manager\ $(shell kubectl get pods -l k8s-app=us-cms-datalake-origin-redi -o jsonpath="{.items[0].status.podIP}"):2213' xrootd.cfg
 	- kubectl apply -k ./
