--- a/cluster/origin/deploy.yaml
+++ b/cluster/origin/deploy.yaml
@@ -5,7 +5,7 @@ metadata:
     k8s-app: us-cms-datalake-origin
   name: us-cms-datalake-origin
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       k8s-app: us-cms-datalake-origin
@@ -20,19 +20,20 @@ spec:
       labels:
         k8s-app: us-cms-datalake-origin
     spec:
-      tolerations:
-      - key: "nautilus.io/noceph" 
-        operator: "Exists"
-        effect: "NoSchedule"
-      - key: "nautilus.io/ceph" 
-        operator: "Exists"
-        effect: "NoSchedule"
-      - key: "nautilus.io/testing" 
-        operator: "Exists"
-        effect: "NoSchedule"
-      - key: "nautilus.io/stashcache"
-        operator: "Exists"
-        effect: "NoSchedule"
+      # tolerations:
+      # - key: "nautilus.io/noceph" 
+      #   operator: "Exists"
+      #   effect: "NoSchedule"
+      # - key: "nautilus.io/ceph" 
+      #   operator: "Exists"
+      #   effect: "NoSchedule"
+      # - key: "nautilus.io/testing" 
+      #   operator: "Exists"
+      #   effect: "NoSchedule"
+      # - key: "nautilus.io/stashcache"
+      #   operator: "Exists"
+      #   effect: "NoSchedule"
+      hostNetwork: true
       containers:
       - env:
         - name: OSG_FQDN
@@ -48,32 +49,38 @@ spec:
           limits:
             cpu: 48
             memory: 100Gi
+            ephemeral-storage: 20Gi
           requests:
             cpu: 1
             memory: 2Gi
+            ephemeral-storage: 10Gi
         volumeMounts:
+        - mountPath: /mnt
+          name: ephemeral
         - mountPath: /etc/xrootd/xrootd.cfg
-          name: xrootd-server-conf
+          name: origin-conf
           subPath: xrootd.cfg
         - mountPath: /home/makeFile
-          name: xrootd-server-conf
+          name: origin-conf
           subPath: makeFile
         - mountPath: /etc/xrootd/auth-file-noauth
-          name: xrootd-server-conf
+          name: origin-conf
           subPath: auth-file-noauth
         - mountPath: /etc/supervisord.d/10-xrootd.conf
-          name: xrootd-server-supervisor
+          name: origin-supervisor
           subPath: supervisord.conf
         - mountPath: /etc/pki/CA/private/OSG-Test-CA.key
           name: ca
           subPath: OSG-Test-CA.pem
-      nodeSelector:
-        kubernetes.io/hostname: k8s-igrok-02.calit2.optiputer.net
+      # nodeSelector:
+      #   kubernetes.io/hostname: k8s-igrok-02.calit2.optiputer.net
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
       terminationGracePeriodSeconds: 30
       volumes:
+      - name: ephemeral
+        emptyDir: {}
       - name: ca
         secret:
           secretName: https-self-certs
@@ -81,9 +88,9 @@ spec:
           - key: OSG-Test-CA.pem
             path: OSG-Test-CA.pem
           defaultMode: 0644
-      - name: xrootd-server-conf
+      - name: origin-conf
         configMap: 
-          name: xrootd-server-conf
+          name: origin-conf
           items:
           - key: xrootd.cfg
             path: xrootd.cfg
@@ -91,9 +98,9 @@ spec:
             path: makeFile
           - key: auth-file-noauth
             path: auth-file-noauth
-      - name: xrootd-server-supervisor
+      - name: origin-supervisor
         configMap: 
-          name: xrootd-server-supervisor
+          name: origin-supervisor
           items:
           - key: supervisord.conf
             path: supervisord.conf
