--- a/cluster/redi/supervisord.conf
+++ b/cluster/redi/supervisord.conf
@@ -4,10 +4,6 @@ user=xrootd
 autorestart=true
 
 [program:xrootd-redi]
-command=xrootd -c /etc/xrootd/xrootd.cfg -l /var/log/xrootd/xrootd.log
+command=xrootd -I v4 -c /etc/xrootd/xrootd.cfg -l /var/log/xrootd/xrootd.log
 user=xrootd
-autorestart=true
-
-[program: telegraf]
-command=telegraf --config /etc/telegraf/telegraf.conf
 autorestart=true
