--- a/cluster/origin/xrootd.cfg
+++ b/cluster/origin/xrootd.cfg
@@ -6,7 +6,7 @@ cms.allow host *
 acc.authdb /etc/xrootd/auth-file-noauth
 xrootd.seclib /usr/lib64/libXrdSec.so
 
-all.manager 192.170.236.138:2213
+all.manager river-c038.ssl-hep.org:2213
 
 all.export /
 
