first working prototype 🎉

--- a/cluster/origin/deploy.yaml
+++ b/cluster/origin/deploy.yaml
@@ -71,7 +71,7 @@ spec:
           subPath: OSG-Test-CA.pem
       # nodeSelector:
       #   kubernetes.io/hostname: k8s-igrok-02.calit2.optiputer.net
-      dnsPolicy: ClusterFirst
+      dnsPolicy: Default
       restartPolicy: Always
       schedulerName: default-scheduler
       terminationGracePeriodSeconds: 30
