--- a/cluster/origin/xrootd.cfg
+++ b/cluster/origin/xrootd.cfg
@@ -6,14 +6,14 @@ cms.allow host *
 acc.authdb /etc/xrootd/auth-file-noauth
 xrootd.seclib /usr/lib64/libXrdSec.so
 
-all.manager river-c038.ssl-hep.org:2213
+all.manager river-c030.ssl-hep.org:2213
 
 all.export /
 
 if exec xrootd
-  http.cadir /etc/grid-security/certificates
-  http.cert /etc/grid-security/xrd/xrdcert.pem
-  http.key /etc/grid-security/xrd/xrdkey.pem
+#  http.cadir /etc/grid-security/certificates
+#  http.cert /etc/grid-security/xrd/xrdcert.pem
+#  http.key /etc/grid-security/xrd/xrdkey.pem
   http.exthandler xrdtpc libXrdHttpTPC.so
   xrd.protocol http:2094 /usr/lib64/libXrdHttp.so
   xrd.port 2094
