--- a/cluster/origin/supervisord.conf
+++ b/cluster/origin/supervisord.conf
@@ -1,5 +1,5 @@
 [program: server-cmsd]
-command=cmsd -c /etc/xrootd/xrootd.cfg -l /var/log/xrootd/cmsd.log
+command=cmsd -I v4 -c /etc/xrootd/xrootd.cfg -l /var/log/xrootd/cmsd.log
 user=xrootd
 autorestart=true
 
