--- a/cluster/redi/xrootd.cfg
+++ b/cluster/redi/xrootd.cfg
@@ -5,22 +5,19 @@ acc.authdb /etc/xrootd/auth-file-noauth
 set xrdr = $OSG_FQDN
 all.manager $xrdr:2213 
 
-all.export /
-
 cms.allow host *
+
+all.export /
 
 if exec xrootd
   xrd.protocol http:2094 /usr/lib64/libXrdHttp.so
   xrd.port 2094
   xrd.allow host *
-  http.cadir /etc/grid-security/certificates
-  http.cert /etc/grid-security/xrd/xrdcert.pem
-  http.key /etc/grid-security/xrd/xrdkey.pem
-
+#  http.cadir /etc/grid-security/certificates
+#  http.cert /etc/grid-security/xrd/xrdcert.pem
+#  http.key /etc/grid-security/xrd/xrdkey.pem
   http.desthttps yes
   http.exthandler xrdtpc libXrdHttpTPC.so
 fi
-
-oss.localroot /mnt
 
 all.sitename US_CMS_DATALAKE_REDI
