--- a/cluster/origin/xrootd.cfg
+++ b/cluster/origin/xrootd.cfg
@@ -6,19 +6,23 @@ cms.allow host *
 acc.authdb /etc/xrootd/auth-file-noauth
 xrootd.seclib /usr/lib64/libXrdSec.so
 
-all.manager river-c030.ssl-hep.org:2213
+all.manager river-c052.ssl-hep.org:2213
 
 all.export /
 
 if exec xrootd
-#  http.cadir /etc/grid-security/certificates
-#  http.cert /etc/grid-security/xrd/xrdcert.pem
-#  http.key /etc/grid-security/xrd/xrdkey.pem
-  http.exthandler xrdtpc libXrdHttpTPC.so
   xrd.protocol http:2094 /usr/lib64/libXrdHttp.so
   xrd.port 2094
+  http.cadir /etc/grid-security/certificates
+  http.cert /etc/grid-security/xrd/xrdcert.pem
+  http.key /etc/grid-security/xrd/xrdkey.pem
+  http.exthandler xrdtpc libXrdHttpTPC.so
+  http.listingdeny yes
+  http.header2cgi Authorization authz
+  http.desthttps yes
 fi
 
 oss.localroot /mnt
+ofs.authlib libXrdAccSciTokens.so
 
 all.sitename US_CMS_DATALAKE_ORIGIN
