--- a/cluster/redi/xrootd.cfg
+++ b/cluster/redi/xrootd.cfg
@@ -1,27 +1,31 @@
 all.role manager
-
-acc.authdb /etc/xrootd/auth-file-noauth
-
 set xrdr = $OSG_FQDN
 all.manager $xrdr:2213 
+all.sitename US_CMS_DATALAKE_REDI
 
 cms.allow host *
 
 all.export /
 
-ofs.authlib libXrdAccSciTokens.so
-
 if exec xrootd
   xrd.protocol http:2094 /usr/lib64/libXrdHttp.so
   xrd.port 2094
   xrd.allow host *
+  
+  acc.authdb /etc/xrootd/auth-file
+  xrootd.seclib /usr/lib64/libXrdSec.so
+  ofs.authlib libXrdAccSciTokens.so
+  http.header2cgi Authorization authz
+  
   http.cadir /etc/grid-security/certificates
   http.cert /etc/grid-security/xrd/xrdcert.pem
   http.key /etc/grid-security/xrd/xrdkey.pem
   http.exthandler xrdtpc libXrdHttpTPC.so
   http.listingdeny yes
-  http.header2cgi Authorization authz
   http.desthttps yes
 fi
 
-all.sitename US_CMS_DATALAKE_REDI
+xrd.trace debug
+http.trace debug
+ofs.trace delay
+pfc.trace debug
