--- a/cluster/origin/xrootd.cfg
+++ b/cluster/origin/xrootd.cfg
@@ -1,28 +1,31 @@
 all.role server
+all.manager river-c036.ssl-hep.org:2213
+all.sitename US_CMS_DATALAKE_ORIGIN
 
 cms.space min 512m 1g
 cms.allow host *
 
-acc.authdb /etc/xrootd/auth-file-noauth
-xrootd.seclib /usr/lib64/libXrdSec.so
-
-all.manager river-c052.ssl-hep.org:2213
-
 all.export /
+oss.localroot /mnt
 
 if exec xrootd
   xrd.protocol http:2094 /usr/lib64/libXrdHttp.so
   xrd.port 2094
+
+  acc.authdb /etc/xrootd/auth-file
+  xrootd.seclib /usr/lib64/libXrdSec.so
+  ofs.authlib libXrdAccSciTokens.so
+  http.header2cgi Authorization authz
+  
   http.cadir /etc/grid-security/certificates
   http.cert /etc/grid-security/xrd/xrdcert.pem
   http.key /etc/grid-security/xrd/xrdkey.pem
   http.exthandler xrdtpc libXrdHttpTPC.so
   http.listingdeny yes
-  http.header2cgi Authorization authz
   http.desthttps yes
 fi
 
-oss.localroot /mnt
-ofs.authlib libXrdAccSciTokens.so
-
-all.sitename US_CMS_DATALAKE_ORIGIN
+xrd.trace debug
+http.trace debug
+ofs.trace delay
+pfc.trace debug
