--- a/cluster/origin/supervisord.conf
+++ b/cluster/origin/supervisord.conf
@@ -1,3 +1,7 @@
+[program: init]
+command=chown xrootd:xrootd /etc/xrootd/auth-file
+user=root
+
 [program: server-cmsd]
 command=cmsd -I v4 -c /etc/xrootd/xrootd.cfg -l /var/log/xrootd/cmsd.log
 user=xrootd
