--- a/cluster/redi/deploy.yaml
+++ b/cluster/redi/deploy.yaml
@@ -45,7 +45,7 @@ spec:
         - mountPath: /etc/xrootd/xrootd.cfg
           name: xrootd-redi-conf
           subPath: xrootd.cfg
-        - mountPath: /etc/scitokens/scitokens.cfg
+        - mountPath: /etc/xrootd/scitokens.cfg
           name: xrootd-redi-conf
           subPath: scitokens.cfg
         - mountPath: /etc/xrootd/auth-file
