--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,8 @@
 FROM opensciencegrid/software-base:fresh
 
 RUN yum -y install vim && \
-    yum -y install osg-xrootd-standalone --enablerepo=osg-upcoming
+    yum -y install osg-xrootd-standalone --enablerepo=osg-upcoming && \
+    yum -y install xrootd-scitokens
 
 RUN curl -O http://uaf-10.t2.ucsd.edu/~aaarora/packages/osg-ca-generator-1.5.0.tar.gz && \
     tar -xvf osg-ca-generator-1.5.0.tar.gz && \
