--- a/exercises/skim_test/deploy.yaml
+++ b/exercises/skim_test/deploy.yaml
@@ -21,7 +21,7 @@ spec:
         k8s-app: skim-test
     spec:
       containers:
-      - image: cmscloud/standalone:cmssw_10_6_25-slc7_amd64_gcc700
+      - image: jguiang/us-cms-datalake-test:latest
         command: [ "/bin/bash", "-c", "--" ]
         args: [ "while true; do sleep 30; done;" ]
         imagePullPolicy: Always
@@ -34,15 +34,15 @@ spec:
             cpu: 2
             memory: 2Gi
         volumeMounts:
-        - mountPath: /home/cmsusr
+        - mountPath: /home/
           name: cache-vol
-        - mountPath: /home/cmsusr/run.sh
+        - mountPath: /home/run.sh
           name: skim-test-exe-configmap
           subPath: run.sh
       dnsPolicy: ClusterFirst
       restartPolicy: Always
-      nodeSelector:
-        kubernetes.io/hostname: river-c030.ssl-hep.org
+      # nodeSelector:
+      #   kubernetes.io/hostname: river-c030.ssl-hep.org
       schedulerName: default-scheduler
       terminationGracePeriodSeconds: 30
       volumes:
