--- a/cluster/origin/xrootd.cfg
+++ b/cluster/origin/xrootd.cfg
@@ -14,6 +14,7 @@ if exec xrootd
 
   acc.authdb /etc/xrootd/auth-file
   xrootd.seclib /usr/lib64/libXrdSec.so
+  ofs.authorize
   ofs.authlib libXrdAccSciTokens.so
   http.header2cgi Authorization authz
   
