--- a/cluster/origin/xrootd.cfg
+++ b/cluster/origin/xrootd.cfg
@@ -26,7 +26,7 @@ if exec xrootd
   http.desthttps yes
 fi
 
-xrd.trace debug
-http.trace debug
-ofs.trace delay
-pfc.trace debug
+xrd.trace all
+http.trace all
+ofs.trace all
+pfc.trace all
