--- a/cluster/redi/xrootd.cfg
+++ b/cluster/redi/xrootd.cfg
@@ -1,6 +1,6 @@
 all.role manager
-set xrdr = $OSG_FQDN
-all.manager $xrdr:2213 
+set xrdr = k8s1-pb10.ultralight.org
+all.manager $(xrdr):8000
 all.sitename US_CMS_DATALAKE_REDI
 
 cms.allow host *
@@ -8,8 +8,8 @@ cms.allow host *
 all.export /
 
 if exec xrootd
-  xrd.protocol http:2094 /usr/lib64/libXrdHttp.so
-  xrd.port 2094
+  xrd.protocol http:1094 /usr/lib64/libXrdHttp.so
+  xrd.port 1094
   xrd.allow host *
   
   acc.authdb /etc/xrootd/auth-file
@@ -25,7 +25,7 @@ if exec xrootd
   http.desthttps yes
 fi
 
-xrd.trace debug
-http.trace debug
-ofs.trace delay
-pfc.trace debug
+xrd.trace all
+http.trace all
+ofs.trace all
+pfc.trace all
