--- a/cluster/origin/xrootd.cfg
+++ b/cluster/origin/xrootd.cfg
@@ -1,5 +1,5 @@
 all.role server
-all.manager river-c036.ssl-hep.org:2213
+all.manager k8s1-pb10.ultralight.org:8000
 all.sitename US_CMS_DATALAKE_ORIGIN
 
 cms.space min 512m 1g
@@ -9,8 +9,8 @@ all.export /
 oss.localroot /mnt
 
 if exec xrootd
-  xrd.protocol http:2094 /usr/lib64/libXrdHttp.so
-  xrd.port 2094
+  xrd.protocol http:8080 /usr/lib64/libXrdHttp.so
+  xrd.port 8080
 
   acc.authdb /etc/xrootd/auth-file
   xrootd.seclib /usr/lib64/libXrdSec.so
@@ -25,7 +25,7 @@ if exec xrootd
   http.desthttps yes
 fi
 
-xrd.trace debug
-http.trace debug
-ofs.trace delay
-pfc.trace debug
+xrd.trace all
+http.trace all
+ofs.trace all
+pfc.trace all
