--- a/cluster/origin/deploy.yaml
+++ b/cluster/origin/deploy.yaml
@@ -20,22 +20,22 @@ spec:
       labels:
         k8s-app: us-cms-datalake-origin
     spec:
+      hostNetwork: True
       containers:
       - image: jguiang/us-cms-datalake-cluster:latest
         imagePullPolicy: Always
         ports:
-        - containerPort: 8080
-          hostPort: 8080
+        - containerPort: 2811
         name: us-cms-datalake-origin
         resources:
           limits:
             cpu: 48
             memory: 100Gi
-            ephemeral-storage: 100Gi
+            ephemeral-storage: 50Gi
           requests:
             cpu: 4
             memory: 8Gi
-            ephemeral-storage: 10Gi
+            ephemeral-storage: 20Gi
         volumeMounts:
         - mountPath: /mnt
           name: ephemeral
