--- a/cluster/redi/xrootd.cfg
+++ b/cluster/redi/xrootd.cfg
@@ -1,6 +1,5 @@
 all.role manager
-set xrdr = k8s1-pb10.ultralight.org
-all.manager $(xrdr):8000
+all.manager k8s1-pb10.ultralight.org:9001
 all.sitename US_CMS_DATALAKE_REDI
 
 cms.allow host *
