--- a/cluster/origin/supervisord.conf
+++ b/cluster/origin/supervisord.conf
@@ -2,6 +2,10 @@
 command=chown xrootd:xrootd /etc/xrootd/auth-file
 user=root
 
+[program:init2]
+command=useradd cmsuser
+user=root
+
 [program: server-cmsd]
 command=cmsd -I v4 -c /etc/xrootd/xrootd.cfg -l /var/log/xrootd/cmsd.log
 user=xrootd
