--- a/cluster/redi/deploy.yaml
+++ b/cluster/redi/deploy.yaml
@@ -49,6 +49,9 @@ spec:
         - mountPath: /etc/supervisord.d/10-xrootd.conf
           name: xrootd-redi-supervisor
           subPath: supervisord.conf
+        - mountPath: /etc/grid-security/grid-mapfile
+          name: xrootd-redi-conf
+          subPath: grid-mapfile
         - mountPath: /etc/grid-security/hostcert.pem
           name: hostcert
         - mountPath: /etc/grid-security/hostkey.pem
@@ -72,6 +75,8 @@ spec:
             path: scitokens.cfg
           - key: auth-file
             path: auth-file
+          - key: grid-mapfile
+            path: grid-mapfile
       - name: xrootd-redi-supervisor
         configMap: 
           name: xrootd-redi-supervisor
