--- a/cluster/redi/supervisord.conf
+++ b/cluster/redi/supervisord.conf
@@ -1,3 +1,11 @@
+[program: init]
+command=chown xrootd:xrootd /etc/xrootd/auth-file
+user=root
+
+[program:init2]
+command=useradd cmsuser
+user=root
+
 [program: redi-cmsd]
 command=cmsd -I v4 -c /etc/xrootd/xrootd.cfg -l /var/log/xrootd/cmsd.log
 user=xrootd
