--- a/cluster/origin/kustomization.yaml
+++ b/cluster/origin/kustomization.yaml
@@ -7,6 +7,7 @@ configMapGenerator:
       - xrootd.cfg
       - scitokens.cfg
       - auth-file
+      - grid-mapfile
   - name: origin-supervisor
     files:
       - supervisord.conf
