--- a/cluster/redi/kustomization.yaml
+++ b/cluster/redi/kustomization.yaml
@@ -7,6 +7,7 @@ configMapGenerator:
       - xrootd.cfg
       - scitokens.cfg
       - auth-file
+      - grid-mapfile
   - name: xrootd-redi-supervisor
     files:
       - supervisord.conf
@@ -15,4 +16,4 @@ generatorOptions:
   disableNameSuffixHash: true
 
 commonLabels:
-  app: xrootd-redi-a
+    app: us-cms-datalake-origin-redi
