--- a/cluster/redi/xrootd.cfg
+++ b/cluster/redi/xrootd.cfg
@@ -7,22 +7,34 @@ cms.allow host *
 all.export /
 
 if exec xrootd
-  xrd.protocol http:1094 /usr/lib64/libXrdHttp.so
+  acc.authdb /etc/xrootd/auth-file
   xrd.port 1094
   xrd.allow host *
-  
-  acc.authdb /etc/xrootd/auth-file
   xrootd.seclib /usr/lib64/libXrdSec.so
-  ofs.authorize
-  ofs.authlib libXrdAccSciTokens.so
+  # GSI (x509)
+  # ofs.osslib libXrdPss.so
+  ofs.authorize 1
+  sec.protocol /usr/lib64 gsi \
+    -certdir:/etc/grid-security/certificates \
+    -cert:/etc/grid-security/xrd/xrdcert.pem \
+    -key:/etc/grid-security/xrd/xrdkey.pem \
+    -crl:1 \
+    -authzfun:libXrdLcmaps.so \
+    -authzfunparms:lcmapscfg=/etc/lcmaps.db,loglevel=5,policy=authorize_only \
+    -gmapopt:10 -gmapto:0
+  # HTTP 
+  xrd.protocol http:1094 /usr/lib64/libXrdHttp.so
   http.header2cgi Authorization authz
-  
   http.cadir /etc/grid-security/certificates
   http.cert /etc/grid-security/xrd/xrdcert.pem
   http.key /etc/grid-security/xrd/xrdkey.pem
   http.exthandler xrdtpc libXrdHttpTPC.so
   http.listingdeny yes
   http.desthttps yes
+  http.secxtractor /usr/lib64/libXrdLcmaps.so
+  # SciTokens
+  # ofs.authorize
+  # ofs.authlib libXrdAccSciTokens.so
 fi
 
 xrd.trace all
