--- a/.github/workflows/origin.yml
+++ b/.github/workflows/origin.yml
@@ -2,7 +2,9 @@ name: XRootD-Origin Build and Push
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+      - x509
   repository_dispatch:
     types:
       - dispatch-build
