added support for multiple origins

--- a/cluster/origin/templates/kustomization.yaml
+++ b/cluster/origin/templates/kustomization.yaml
@@ -2,13 +2,15 @@ resources:
   - deploy.yaml
 
 configMapGenerator:
-  - name: origin-conf
+  - name: NAME_PLACEHOLDER-conf
     files:
       - xrootd.cfg
       - scitokens.cfg
       - auth-file
       - grid-mapfile
-  - name: origin-supervisor
+      - 5fca1cb1.0
+      - 5fca1cb1.signing_policy
+  - name: NAME_PLACEHOLDER-supervisor
     files:
       - supervisord.conf
 
