--- a/cluster/origin/templates/supervisord.conf
+++ b/cluster/origin/templates/supervisord.conf
@@ -2,8 +2,16 @@
 command=chown xrootd:xrootd /etc/xrootd/auth-file
 user=root
 
+[program: init1.1]
+command=chown xrootd:xrootd /mnt
+user=root
+
 [program:init2]
 command=useradd cmsuser
+user=root
+
+[program:init2.1]
+command=useradd ruciouser
 user=root
 
 [program: server-cmsd]
