--- a/cluster/origin/templates/xrootd.cfg
+++ b/cluster/origin/templates/xrootd.cfg
@@ -1,6 +1,6 @@
 all.role server
-all.manager k8s1-pb10.ultralight.org:9001
-all.sitename US_CMS_DATALAKE_ORIGIN
+all.manager REDI_NODE_PLACEHOLDER:REDI_PORT_PLACEHOLDER
+all.sitename US_CMS_DATALAKE_ORIGIN_PORT_PLACEHOLDER
 
 cms.space min 512m 1g
 cms.allow host *
@@ -10,8 +10,9 @@ oss.localroot /mnt
 
 if exec xrootd
   acc.authdb /etc/xrootd/auth-file
-  xrd.port 2811
+  xrd.port PORT_PLACEHOLDER
   xrootd.seclib /usr/lib64/libXrdSec.so
+  xrootd.chksum max 2 adler32
   # GSI (x509)
   # ofs.osslib libXrdPss.so
   ofs.authorize 1
@@ -24,7 +25,7 @@ if exec xrootd
     -authzfunparms:lcmapscfg=/etc/lcmaps.db,loglevel=5,policy=authorize_only \
     -gmapopt:10 -gmapto:0
   # HTTP
-  xrd.protocol http:2811 /usr/lib64/libXrdHttp.so
+  xrd.protocol http:PORT_PLACEHOLDER /usr/lib64/libXrdHttp.so
   http.header2cgi Authorization authz
   http.cadir /etc/grid-security/certificates
   http.cert /etc/grid-security/xrd/xrdcert.pem
@@ -38,7 +39,7 @@ if exec xrootd
   # ofs.authlib libXrdAccSciTokens.so
 fi
 
-xrd.trace all
-http.trace all
+xrd.trace debug
+http.trace debug
 ofs.trace all
 pfc.trace all
